codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__feedback_upload_consent_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
      Upload logs?
› As
      The following files will be sent:
  GP    • codex-logs.log
        • client-logs.txt (if available)
        • codex-doctor-report.json
        • codex-apps-tools-cache.json (if available)
        • codex-app-directory-cache.json (if available)
        • windows-sandbox.log
        • auto-review-rollout-thread-1.jsonl
        • codex-connectivity-diagnostics.txt

      Connectivity diagnostics
        - Proxy environment variables are set and may affect connectivity.
          - HTTPS_PROXY = hello


    › 1. Yes  Share the current Elpis session logs and diagnostics with the
              team for troubleshooting
      2. No

      enter select · esc back
