codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__full_access_confirmation_popup.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: popup
---
      Enable full access?
› As  When Elpis runs with full access, it can edit any file on your
      computer and run commands with network, without your approval.
  GP  Exercise caution when enabling full access. This significantly
      increases the risk of data loss, leaks, or unexpected behavior.


    › 1. Yes, continue anyway  Apply full access for this session
      2. Cancel                Go back without enabling full access

      enter select · esc back
