codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__goal_edit_prompt.snap
---
source: tui/src/chatwidget/tests/goal_menu.rs
assertion_line: 103
expression: "render_bottom_popup(&chat, 100)"
---
 Elpis · model gpt-5.6-sol · location /tmp/project

  Edit goal

› Keep improving the bare goal command until it feels calm and useful.

  enter submit · esc back
