codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_approved_exec_is_hidden_from_history.snap
---
source: tui/src/chatwidget/tests/guardian.rs
assertion_line: 377
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---

 Elpis · model gpt-5.6-sol default · location /tmp/project
│                                                                       │CONTEXT LEDGER  context not measured · ≈0
› Ask Elpis to do anything                                              │source estimates
│                                                                       │Tab controls · Alt+C hide · Ctrl+click open
  ? for shortcuts               100% context left · Tab Context Ledger  │file
                                                                        │
                                                                        │SMART PRUNE                          [···] SYNC
                                                                        │Reading current thread state
                                                                        │Syncing… · /smart-prune on|off sets an explicit
                                                                        │state
                                                                        │
                                                                        │SUBAGENTS                             [━━━●] ON
                                                                        │May delegate to other agents
                                                                        │
                                                                        │CONTEXT WINDOW  usage unavailable
                                                                        │Context measurement unavailable until the first
                                                                        │request snapshot
                                                                        │
                                                                        │No portable context is available.
